# clutbench

./: Application.cpp  Application.hpp  CMakeLists.txt  ClutMethod.hpp  Exception.cpp  Exception.hpp  Image.cpp  Image.hpp  ImageReader.hpp  ImageWriter.hpp  IntegerClutMethod.cpp  IntegerClutMethod.hpp  LICENSE.txt  OptimizedClutMethod.cpp  OptimizedClutMethod.hpp  OriginalClutMethod.cpp  OriginalClutMethod.hpp  PpmImageReader.cpp  PpmImageReader.hpp  PpmImageWriter.cpp  PpmImageWriter.hpp  README.md  SseClutMethod.cpp  SseClutMethod.hpp  TestBench.cpp  TestBench.hpp  Timer.cpp  Timer.hpp  clutbench.cpp
